# TDPose

Mediapipe/: Mediapipe.docx  README.md  demo.py  demo_0.py  demo_1.py  demo_final.py  plot_pose_live.py
human-pose-estimation/: README.md
human-pose-estimation/lightweight-human-pose-estimation.cpp/: CMakeLists.txt  main.cpp
human-pose-estimation/lightweight-human-pose-estimation.pytorch/: export_onnx.sh
human-pose-estimation/lightweight-human-pose-estimation.pytorch/scripts/: convert_to_onnx.py
lightweight-human-pose-estimation-3d-demo.pytorch/: demo.py  run_demo.sh
lightweight-human-pose-estimation-3d-demo.pytorch/pose_extractor/src/: extract_poses.cpp  peak.hpp
